[workspace]
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "examples/*"]
exclude = ["crates/tosca-esp32c3"]

[workspace.package]
version = "0.1.1"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A versatile, customizable, and secure IoT framework."
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ToscaLabs/tosca"
categories = ["iot"]
keywords = ["iot", "framework", "library", "controller", "devices"]
rust-version = "1.90"
readme = "README.md"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "deny"
warnings = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
tosca.version = "0.1.1"
tosca.path = "crates/tosca"
tosca.default-features = false

tosca-os.version = "0.1.1"
tosca-os.path = "crates/tosca-os"
tosca-os.default-features = false

tosca-drivers.version = "0.1.1"
tosca-drivers.path = "crates/tosca-drivers"
tosca-drivers.default-features = false

tosca-controller.version = "0.1.1"
tosca-controller.path = "crates/tosca-controller"

hashbrown.version = "0.17"
hashbrown.default-features = false
hashbrown.features = ["default-hasher"]

indexmap.version = "2.12"
indexmap.default-features = false

mdns-sd.version = "0.19.0"
mdns-sd.default-features = false

serde.version = "1.0"
serde.default-features = false

serde_json.version = "1"
serde_json.default-features = false

tokio.version = "1.0"
tokio.default-features = false

tracing.version = "0.1"
tracing.default-features = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
