[package]
name = "tosca-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = """
A library crate for building a controller to manage all `tosca` devices
on a network.
"""
keywords = ["iot", "library", "controller", "devices", "events"]
documentation = "https://docs.rs/tosca-controller"
readme = "README.md"
license.workspace = true
repository = "https://github.com/ToscaLabs/tosca/tree/master/crates/tosca-controller"
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
metadata = []
stream = ["dep:futures-util"]
default = ["metadata"]

[dependencies]
# Workspace crates
tosca = { workspace = true, features = ["deserialize"] }
hashbrown = { workspace = true }
indexmap = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

# External crates
bytes = { version = "1.11.0", default-features = false }
flume = { version = "0.12", default-features = false, features = ["async"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "stream"] }
rumqttc = { version = "0.25.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }

# Optional stream utilities
futures-util = { version = "0.3.31", default-features = false, optional = true }

[dev-dependencies]
tosca-os = { workspace = true }
serial_test = { version = "3.2.0", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
