[package]
name = "tosca-esp32c3"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "A Rust library crate designed for developing Tosca firmware on ESP32-C3 boards."
license = "MIT"

[dependencies]
tosca.path = "../tosca"
tosca.version = "0.1.0"
tosca.default-features = false

# A critical section for a multithread context.
critical-section.version = "1.2.0"

# HTTP server
edge-http.version = "0.6.1"

# mDNS service
edge-mdns.version = "0.6.1"

# Networking traits
edge-nal.version = "0.5.0"
edge-nal-embassy.version = "0.7.0"

# Embassy framework
embassy-executor.version = "0.9.1"
embassy-executor.features = ["log"]

embassy-net.version = "0.7.1"
embassy-net.features = ["dhcpv4", "log", "medium-ethernet", "tcp", "udp"]

embassy-sync.version = "0.7.2"

embassy-time.version = "0.5.0"
embassy-time.features = ["log"]

# Asynchronous read and write traits
embedded-io-async.version = "0.7.0"

# Esp dependencies
esp-alloc.version = "0.9.0"

# The "unstable" feature is required in order to use Embassy
esp-hal.version = "1.0.0"
esp-hal.features = ["esp32c3", "log-04", "unstable"]

esp-rtos.version = "0.2.0"
esp-rtos.features = ["embassy", "esp-alloc", "esp-radio", "esp32c3", "log-04"]

esp-println.version = "0.16.1"
esp-println.features = ["esp32c3", "log-04"]

esp-radio.version = "0.17.0"
esp-radio.features = ["esp-alloc", "esp32c3", "log-04", "wifi"]

# Logging utilities
log.version = "0.4.29"

# Mqtt protocol
rust-mqtt.version = "0.3.1"
rust-mqtt.default-features = false

# Serialization process
serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

serde_json.version = "1"
serde_json.default-features = false
serde_json.features = ["alloc"]

# Static cell
static_cell.version = "2.1.1"
static_cell.features = ["nightly"]
