[package]
name = "tosca-esp32c3"
version = "0.1.1"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A library for building Tosca firmware that runs on ESP32-C3 boards."
keywords = ["iot", "iot-library", "firmware", "device", "esp32-c3"]
documentation = "https://docs.rs/tosca-esp32c3"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ToscaLabs/tosca/tree/master/crates/tosca-esp32c3"
rust-version = "1.90"

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Tosca workspace crate
tosca = { path = "../tosca", version = "0.1.0", default-features = false }

# Multithread critical section
critical-section = "1.2.0"

# HTTP server
edge-http = "0.6.1"

# mDNS service
edge-mdns = "0.6.1"

# Networking traits
edge-nal = "0.5.0"
edge-nal-embassy = "0.7.0"

# Embassy framework
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-net = { version = "0.7.1", features = ["dhcpv4", "log", "medium-ethernet", "tcp", "udp"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }

# Async IO traits
embedded-io-async = "0.6.1"

# ESP dependencies
esp-alloc = "0.9.0"
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32c3", "log-04"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32c3", "log-04", "wifi"] }

# Logging
log = "0.4.29"

# MQTT protocol
rust-mqtt = { version = "0.3.1", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Static cell
static_cell = "2.1.1"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "deny"
warnings = "deny"
unused_results = "deny"

[lints.clippy]

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
