[package]
name = "tosca-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for building Tosca firmware that runs on operating systems."
keywords = ["iot", "iot-library", "firmware", "operating-systems"]
documentation = "https://docs.rs/tosca-os"
readme = "README.md"
license.workspace = true
repository = "https://github.com/ToscaLabs/tosca/tree/master/crates/tosca-os"
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
stream = ["dep:futures-core", "dep:tokio-util"]

[dependencies]
tosca = { workspace = true }

axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "http2", "json"] }

mdns-sd = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }

# Stream feature dependencies
futures-core = { version = "0.3", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["io"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis"
] }
