[package]
name = "tosca"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library that acts as an interface between a device and its controller."
keywords = ["iot", "iot-library", "interface", "data", "methods"]
documentation = "https://docs.rs/tosca"
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
deserialize = []

[dependencies]
hashbrown = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
log = "0.4.29"
serde = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }
