[package]
name = "controller-events-receiver"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = """
A receiver for events produced by `tosca` devices. It scans the network for
`tosca` devices and subscribes to their brokers to receive these events.
"""
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
tosca.path = "../../crates/tosca"
tosca.version = "0.1"
tosca.default-features = false
tosca.features = ["deserialize"]

tosca-controller.path = "../../crates/tosca-controller"
tosca-controller.version = "0.1"
# FIXME: Default features must be enabled for dependencies to work correctly.
# To resolve this, we may need to move the examples into another workspace or
# a separate repository.
#tosca-controller.default-features = false

clap.version = "4.5"
clap.features = ["derive"]

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt", "rt-multi-thread", "signal"]

tracing.version = "0.1"
tracing.default-features = false

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["ansi", "fmt"]
