[package]
name = "controller-events-receiver"
version = "0.2.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = """
A receiver for events produced by `tosca` devices. It scans the network for
`tosca` devices and subscribes to their brokers to receive these events.
"""
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
# Workspace crates
tosca = { workspace = true, features = ["deserialize"] }
tosca-controller = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime and logging
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
