[package]
name = "controller-events-sse-receiver"
version = "0.2.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = """
A receiver for events produced by `tosca` devices. It scans the network for
`tosca` devices, subscribes to their brokers to receive events, and displays
their data in real-time on a web page using SSE technology.
"""
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
# Workspace crates
tosca = { workspace = true, features = ["deserialize"] }
tosca-controller = { workspace = true }

# Template engine
askama = "0.15"

# Web framework
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Futures and async utilities
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

# HTTP utilities
tower-http = { version = "0.6.1", default-features = false, features = ["fs", "trace"] }

# Error handling
thiserror = "2.0.17"

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
