[package]
name = "os-ip-camera"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "An ip-camera implemented with the tosca-os crate."
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
# Workspace crates
tosca = { workspace = true }
tosca-os = { workspace = true, features = ["stream"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }

# Camera input
nokhwa = { version = "0.10", default-features = false, features = ["input-native", "serialize", "output-threaded"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Error handling
thiserror = { version = "2.0.17" }

# Async runtime
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
