[package]
name = "os-light"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A light implemented with the tosca-os crate."
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
# Workspace crates
tosca = { workspace = true }
tosca-os = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Async runtime
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread"] }

# Logging
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
