[package]
name = "light-with-events"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = """
A simple stateless light for an ESP32-C3 board that sends events
to an external process in response to changes to internal sensors.
"""
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
# Tosca crates
tosca = { path = "../../../tosca", version = "0.1.0", default-features = false }
tosca-esp32c3 = { path = "../../", version = "0.1.0" }

# Embassy framework
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-net = { version = "0.7.1", features = ["dhcpv4", "log", "medium-ethernet", "tcp", "udp"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["log"] }

# ESP dependencies
esp-alloc = "0.9.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3", "log-04"] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32c3", "log-04"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32c3", "log-04", "wifi"] }

# Logging utilities
log = "0.4.28"

# TOML configuration
toml-cfg = { version = "0.2.0", default-features = false }

[build-dependencies]
toml-cfg = { version = "0.2.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread.
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
